@@ -111,7 +111,7 @@ class Smarty extends Smarty_Internal_TemplateBase
     /**
      * smarty version
      */
-    const SMARTY_VERSION = '3.1.22-dev/22';
+    const SMARTY_VERSION = '3.1.22-dev/23';
 
     /**
      * define variable scopes
